stop the bottom edge of buttons getting clipped in devtools (#8400)

--- a/res/css/views/dialogs/_DevtoolsDialog.scss
+++ b/res/css/views/dialogs/_DevtoolsDialog.scss
@@ -26,7 +26,6 @@ limitations under the License.
 }
 
 .mx_DevTools_content {
-    margin: 10px 0;
     overflow-y: auto;
     height: calc(100% - 124px); // 58px for buttons + 50px for header + 8px margin around
 }
